# Notion-with-GoogleCalendar-API

./: README.md  api.bat  api.bat.lnk  main.py  notion.py  pyproject.toml  quickstart.py
json/: credentials.json  db.json  filter.json  token.json
