[tool.poetry]
name = "notion-api"
version = "0.1.0"
description = "python packages of notion_api"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "notion_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
google = "^3.0.0"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^3.4.1"
google-api-python-client = "^2.70.0"
pylint = "^2.15.9"
datetime = "^4.9"
google-auth-oauthlib = "^0.8.0"
google-auth = "^2.15.0"
google-auth-httplib2 = "^0.1.0"
notion-client = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
